@@ -257,9 +257,9 @@
 
   <property>
     <name>dfs.namenode.fs-limits.max-component-length</name>
-    <value>0</value>
-    <description>Defines the maximum number of characters in each component
-      of a path. A value of 0 will disable the check.
+    <value>255</value>
+    <description>Defines the maximum number of bytes in UTF-8 encoding in each
+        component of a path. A value of 0 will disable the check.
     </description>
   </property>
 
