@@ -243,6 +243,9 @@ Release 2.0.3-alpha - 2013-02-06
     HDFS-5286. Flatten INodeDirectory hierarchy: Replace INodeDirectoryWithQuota
     with DirectoryWithQuotaFeature.  (szetszwo)
 
+    HDFS-6055. Change default configuration to limit file name length in HDFS.
+    (cnauroth)
+
   OPTIMIZATIONS
 
     HDFS-3429. DataNode reads checksums even if client does not need them (todd)
